Very basic sound challenge

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
   const soundDiv = document.getElementById("soundDiv");
   
   function playSound() {
-    soundDiv.innerHTML = "<audio controls=\"controls\"><source src=\"test.wav\" type=\"audio/x-wav\" /></audio>"
+    soundDiv.innerHTML = "<audio controls=\"controls\"><source src=\"/apps/captcha/new_sound\" type=\"audio/x-wav\" /></audio>"
   }
   
   submitButton.addEventListener('click', async () => {
