--- a/demo/index.html
+++ b/demo/index.html
@@ -8,17 +8,17 @@
   <br>
   &nbsp;- Input only capital letters and digits (except zero).
 </p>
-<br>
 <div>
   <img src="/apps/captcha/new_image" alt="Image failed to load.">
   <br>
-  <div id="soundDiv"></div>
-  <br>
   <label for="answerBox">Type the text you recognize:</label><br><br>
-  <input type="text" id="answerBox" name="capans">
-  <button autocomplete="false" id="submitButton">Submit</button>
-  <br><br>
-  <a href="javascript:void(0);" onclick="playSound();" id="requestSound">Request a Sound-Based Challenge</a>
+  <input autocomplete="false" type="text" id="answerBox" name="capans">
+  <button id="submitButton">Submit</button>
+  <br>
+  <br>
+  <div id="soundDiv">
+    <a href="javascript:void(0);" onclick="playSound();" id="requestSound">Request a Sound-Based Challenge</a>
+  </div>
 </div>
 <br>
 <div id="responseDiv"></div>
@@ -27,9 +27,12 @@
   const submitButton = document.getElementById("submitButton");
   const responseDiv = document.getElementById("responseDiv");
   const soundDiv = document.getElementById("soundDiv");
+  // Firefox agressively caches the audio even when the document reloads
+  // We load a random URL under /new_sound/ to trick it into not caching
+  const randCacheWorkaround = Math.floor(Math.random() * 100);
   
   function playSound() {
-    soundDiv.innerHTML = "<audio controls=\"controls\"><source src=\"/apps/captcha/new_sound\" type=\"audio/x-wav\" /></audio>"
+    soundDiv.innerHTML = `<audio controls="controls"><source src="/apps/captcha/new_sound/${randCacheWorkaround}" type="audio/x-wav" /></audio>`
   }
   
   submitButton.addEventListener('click', async () => {
@@ -54,3 +57,5 @@
 <!-- https://developer.mozilla.org/en-US/docs/Learn/Forms/Sending_forms_through_JavaScript -->
 <!-- https://tecadmin.net/call-javascript-function-on-click-events/ -->
 <!-- https://stackoverflow.com/questions/1175448/best-way-to-play-wav-files-in-the-browser -->
+<!-- https://www.w3schools.com/js/js_cookies.asp -->
+<!-- https://www.w3schools.com/js/js_random.asp -->
