--- a/demo/basic.html
+++ b/demo/basic.html
@@ -68,3 +68,4 @@
 <!-- https://www.w3schools.com/js/js_cookies.asp -->
 <!-- https://www.w3schools.com/js/js_random.asp -->
 <!-- https://natclark.com/tutorials/javascript-ios-device/ -->
+<!-- https://wyzant.com-Tutor Tim Metcalfe89 -->
