Modified Form to use querystrings and Split Survey and Chart Script into two pages

--- a/demo/site/survey.html
+++ b/demo/site/survey.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<form id="favoriteForm">
+<h1><I>Survey</I></h1>
+<hr><br>
+<form method="get" action="/submit.php">
+  <input type="hidden" name="formid" value="survey">
   <div>
     <label>What is your favorite color?</label>
-    <select id="favoriteColor" required>
+    <select name="favoriteColor" required>
       <option></option>
       <option>Blue</option>
       <option>Red</option>
@@ -14,10 +17,10 @@
       <option>Purple</option>
     </select>
   </div>
-
+  <br>
   <div>
     <label>What is your favorite sport?</label>
-    <select id="favoriteSport" required>
+    <select name="favoriteSport" required>
       <option></option>
       <option>Soccer</option>
       <option>Basketball</option>
@@ -27,139 +30,12 @@
       <option>Pickleball</option>
     </select>
   </div>
-
-  <div>
-    <img src="/apps/captcha/new_image" alt="Image failed to load."/>
-  </div>
-  <div>
-    <input placeholder="Enter the Capcha solution here" id="capchaSolution" required />
-  </div>
-  <button>Submit</button>
+  <br>
+  <input type="submit" value="Submit">
 </form>
-
-<div id="output"></div>
-<div id="colorsChart"></div>
-<div id="sportsChart"></div>
-<script src='https://cdn.plot.ly/plotly-2.20.0.min.js'></script>
-<script>
-  const favoriteForm = document.getElementById("favoriteForm");
-  const favoriteColor = document.getElementById("favoriteColor");
-  const favoriteSport = document.getElementById("favoriteSport");
-  const capchaSolution = document.getElementById("capchaSolution");
-  const output = document.getElementById("output");
-  const colorsChart = document.getElementById("colorsChart");
-  const sportsChart = document.getElementById("sportsChart");
-  
-  favoriteForm.addEventListener("submit", handleSubmit);
-  async function handleSubmit(e) {
-    e.preventDefault();
-    const favoriteColorValue = favoriteColor.value;
-    const favoriteSportValue = favoriteSport.value;
-    const capchaSolutionValue = capchaSolution.value;
-    const data = await sendRequest(favoriteColorValue, favoriteSportValue, capchaSolutionValue)
-    if (!data.success) {
-      output.textContent = "Wrong capcha!";
-      return;
-    }
-    buildGraph(data);
-  }
-  async function sendRequest(favoriteColorValue, favoriteSportValue, capchaSolutionValue) {
-    // const response = await fetch("/apps/captcha/favorites", {
-    //   method: "POST",
-    //   body: `captchaAnswer=${capchaSolutionValue}&color=${favoriteColorValue}&sport=${favoriteSportValue}`,
-    //   headers: {
-    //     "Content-Type": "application/x-www-form-urlencoded"
-    //   }
-    // })
-    // const responseData = await response.json();
-    // return responseData;
-    // return {
-    //   success: false,
-    // }
-    return {
-      success: true,
-      colors: [{
-          name: "Blue",
-          count: 4
-        },
-        {
-          name: "Red",
-          count: 1
-        },
-        {
-          name: "Yellow",
-          count: 7
-        },
-        {
-          name: "Green",
-          count: 5
-        },
-        {
-          name: "Orange",
-          count: 4
-        },
-        {
-          name: "Purple",
-          count: 2
-        },
-      ],
-      sports: [{
-          name: "Soccer",
-          count: 2
-        },
-        {
-          name: "Basketball",
-          count: 3
-        },
-        {
-          name: "Football",
-          count: 4
-        },
-        {
-          name: "Badminton",
-          count: 1
-        },
-        {
-          name: "Swimming",
-          count: 6
-        },
-        {
-          name: "Pickleball",
-          count: 3
-        },
-      ]
-    }
-  }
-
-  function buildGraph(data) {
-    const colors = data.colors;
-    const sports = data.sports;
-    
-    var colorData = [{
-      x: colors.map(function(color) {
-        return color.name;
-      }),
-      y: colors.map(function(color) {
-        return color.count;
-      }),
-      name: "Colors",
-      type: 'bar'
-    }];
-    Plotly.newPlot('colorsChart', colorData);
-    
-    var sportData = [{
-      x: sports.map(function(sport) {
-        return sport.name;
-      }),
-      y: sports.map(function(sport) {
-        return sport.count;
-      }),
-      name: "Sports",
-      type: 'bar'
-    }]
-    Plotly.newPlot("sportsChart", sportData);
-  }
-</script>
+<br>
+<hr>
+<p>Note: You will be required to complete a CAPTCHA challenge!</p>
 </body>
 </html>
 
