Fixed POST query name

--- a/demo/site/basic.html
+++ b/demo/site/basic.html
@@ -12,7 +12,7 @@
   <img src="/apps/direct/new_image" alt="Image failed to load.">
   <br>
   <label for="answerBox">Type the text you recognize:</label><br><br>
-  <input autocomplete="false" type="text" id="answerBox" name="capans">
+  <input autocomplete="false" type="text" id="answerBox" name="captchaAnswer">
   <button id="submitButton">Submit</button>
   <br>
   <br>
