Special PHP Directory

--- a/demo/site/basic.html
+++ b/demo/site/basic.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h2>Are you a robot?</h2>
+<h1><I>Are you a robot?</I></h1>
+<hr>
 <p><b>Complete the verification challenge!</b></p>
 <p>
   &nbsp;- You have one minute to solve.
   <br>
-  &nbsp;- Input only capital letters and digits (except zero).
+  &nbsp;- Input only capital letters and digits.
 </p>
 <div>
   <img src="/apps/direct/new_image" alt="Image failed to load.">
@@ -22,6 +23,7 @@
 </div>
 <br>
 <div id="responseDiv"></div>
+<hr><br>
 <script>
   const answerBox = document.getElementById("answerBox");
   const submitButton = document.getElementById("submitButton");
