Functional PHP Survey App

--- a/demo/site/survey.html
+++ b/demo/site/survey.html
@@ -15,6 +15,7 @@
       <option>Green</option>
       <option>Orange</option>
       <option>Purple</option>
+      <option>Black</option>
     </select>
   </div>
   <br>
@@ -28,6 +29,20 @@
       <option>Badminton</option>
       <option>Swimming</option>
       <option>Pickleball</option>
+    </select>
+  </div>
+  <br>
+  <div>
+    <label>What is your favorite fruit?</label>
+    <select name="favoriteFruit" required>
+      <option></option>
+      <option>Apple</option>
+      <option>Orange</option>
+      <option>Banana</option>
+      <option>Pear</option>
+      <option>Blueberry</option>
+      <option>Grape</option>
+      <option>Blackberry</option>
     </select>
   </div>
   <br>
