--- a/demo/site/index.html
+++ b/demo/site/index.html
@@ -9,6 +9,7 @@
     <li><a href="/survey.html">Survey Form</a></li><br>
     <li><a href="/login.html">Login Form</a></li><br>
     <li><a href="/contact.html">Contact Us</a></li><br>
+    <li><a href="/results.php">Survey Results</a></li><br>
   </ol>
 </body>
 </html>
