--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <li><a href="/basic.html">Basic Validation</a></li><br>
     <li><a href="/survey.html">Survey Form</a></li><br>
     <li><a href="/login.html">Login Form</a></li><br>
-    <li><a href="/download.html">File Download</a></li><br>
+    <li><a href="/contact.html">Contact Us</a></li><br>
   </ol>
 </body>
 </html>
