Minor UX Adjustments

--- a/demo/site/basic.html
+++ b/demo/site/basic.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 <br>
-<div id="responseDiv"></div>
+<div id="responseDiv" class="bannerBox3"></div>
 <hr><br>
 <script>
   const answerBox = document.getElementById("answerBox");
